# chat_core

./: .gitignore  Cargo.toml  GUIDE.md  README.md  justfile
.github/workflows/: create_release.yml  cross_targets.yml  docs_pages.yml  release.yml  sdk_codegen.yml
api/: sdk_api.json
flutter/sgtp_chat_core/: README.md  pubspec.yaml
flutter/sgtp_chat_core/.dart_tool/: package_config.json  package_graph.json
flutter/sgtp_chat_core/hook/: build.dart
flutter/sgtp_chat_core/lib/: sgtp_chat_core.dart
flutter/sgtp_chat_core/lib/src/: chat_core_release_info.dart  messenger_mls.dart  messenger_mls_stub.dart  rust_external_library_stub.dart  rust_external_library_web.dart
flutter/sgtp_chat_core/lib/src/rust/: frb_api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
include/: messenger_mls.h
src/: backend.rs  ffi.rs  frb_api.rs  frb_generated.rs  lib.rs  service.rs  state.rs  types.rs
tests/: backend_service_branches.rs  ffi_smoke.rs  openmls_e2e.rs  sdk_codegen_bin.rs  service_production_paths.rs  state_helpers.rs
