[package]
name = "chat_core"
version = "0.1.0"
edition = "2024"

[lib]
name = "chat_core"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
openmls = { version = "0.8.1", features = ["openmls_rust_crypto", "js"] }
openmls_rust_crypto = "0.5.1"
openmls_basic_credential = "0.5.0"
ed25519-dalek = "2.2.0"
flutter_rust_bridge = "=2.12.0"

getrandom = { version = "0.2.17", features = ["js"] }
